# DataAnalysis-SeoulPay

./: main.py  pyproject.toml
src/: 01_data_collection.ipynb  02_text_preprocessing.ipynb  03_review_wordcloud.ipynb  test.ipynb
src/utils/: crawling.py  io_util.py  list_util.py  nlp_utils.py  visualize.py
